implement fixed Huffman

--- a/Zip/Zip.fsproj
+++ b/Zip/Zip.fsproj
@@ -38,6 +38,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Deflate.fs" />
     <Compile Include="Zip.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" />
