--- a/Zip/Zip.fsproj
+++ b/Zip/Zip.fsproj
@@ -38,6 +38,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crc.fs" />
     <Compile Include="Deflate.fs" />
     <Compile Include="Zip.fs" />
   </ItemGroup>
